header-grid-fix

--- a/src/components/form/JobApplicationForm.module.css
+++ b/src/components/form/JobApplicationForm.module.css
@@ -7,6 +7,11 @@
   color: #4c73e3;
 }
 
+.formPageTitle span {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
 .form {
   display: flex;
   flex-direction: column;
@@ -29,6 +34,13 @@
   border-radius: 16px;
 }
 
+.basicForm {
+  grid-template-areas:
+    'topleft topcenter topright'
+    'midleft midcenter midright'
+    'botleft botleft botcenter';
+}
+
 .additionalForm {
   grid-template-areas:
     'top'
@@ -41,12 +53,16 @@
   grid-area: topleft / topleft / topright / topright;
 }
 
-.formGroupGender {
+.formGroupGenderEducation {
+  display: flex;
   grid-area: botleft / botleft;
+}
+.formGroupGender {
+  width: 25%;
 }
 
 .formGroupEducation {
-  grid-area: botcenter / botcenter;
+  width: 45%;
 }
 
 .label,
