--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,10 +1,11 @@
 header {
   display: flex;
-  justify-content: center;
+  justify-content: right;
   align-items: center;
   top: 0;
   background-color: #4c73e3;
   width: auto;
+  padding: 0 10rem;
 }
 
 .headerItem {
